# Translitslovnyk

./: .gitignore  LICENSE  README.md  README_ENG.md  config.json  main.py  pyproject.toml  requirements.txt
dictionaries/: dstu9112a_cyrillic-latin.json  dstu9112a_latin-cyrillic.json  dstu9112b_cyrillic-latin.json  iso9_cyrillic-latin.json  iso9_latin-cyrillic.json  test.json  ua_pasportna_cyrillic-latin.json  ukrkyr-ukrlat_br.json  ukrlat-ukrkyr_variant-1+_br.json  ukrlat-ukrkyr_variant-1_br.json  ukrlat-ukrkyr_variant-2_br.json  ukrlat-ukrkyr_variant-3_br.json  ukrlat-ukrkyr_variant-4_br.json  ukrlat-ukrkyr_variant-a_br.json  ukrlat-ukrkyr_variant-b_br.json  ukrlat-ukrkyr_variant-g_br.json  ukrlat-ukrkyr_variant-v_br.json
internationalization/: eng_language.json  ukr_language.json
source/: command_line_handler.py  config.py  console_ui.py  dictionary.py  internationalization.py  logger.py  translate.py
